# python-project-template

./: .gitignore  CONTRIBUTING.md  Containerfile  README.md  makefile  pyproject.toml
.github/workflows/: main.yml  release.yml
project_name/: __init__.py
tools/: README.md
